# pdxhackerspace-events2rag

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/events2rag/: __init__.py  config.py  datetime_utils.py  embedder.py  ics_feed.py  json_feed.py  main.py  models.py  qdrant_store.py  service.py  text_utils.py
src/events2rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_embedder.py  test_json_feed.py  test_qdrant_store.py  test_service.py  test_text_utils.py
